--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -29,3 +29,12 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(6.5px);
 -webkit-backdrop-filter: blur(6.5px);
 }
+#p{
+  gap:20px;
+}
+
+#btnSearch,
+#btnClear{
+    display: inline-block;
+    vertical-align: top;
+}
