--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -16,7 +16,7 @@ h4{
   font-size: 34px !important;
 }
 
-img {
+img, iframe {
   border-radius: 12px;
 }
 #gak{
@@ -33,8 +33,16 @@ backdrop-filter: blur(6.5px);
   gap:20px;
 }
 
-#btnSearch,
-#btnClear{
-    display: inline-block;
-    vertical-align: top;
+
+.custom-react-quill .ql-editor{
+  background-color: white; /* Atur latar belakang menjadi putih */
+  color: black; /* Atur warna teks menjadi hitam */
+  /* Tambahkan properti CSS lainnya sesuai kebutuhan Anda */
 }
+
+.ql-toolbar {
+  background-color: white; /* Atur latar belakang menjadi putih */
+  color: black; /* Atur warna teks menjadi hitam */
+  /* Tambahkan properti CSS lainnya sesuai kebutuhan Anda */
+}
+
